Fix tabbing spacing for Header, add margin-top to News

--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -1,5 +1,6 @@
 .header {
   width: 100%;
+  height: 2rem;
 }
 
 .navigation {
@@ -10,7 +11,6 @@
 
 .navigation > a {
   text-decoration: none;
-  padding: 0.2rem 0.5rem;
   padding: 0.2rem;
   color: var(--text-color);
 }
