--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,7 @@ html {
   --container-padding: 1rem;
   --main-background-color: #111111;
   --yellow-color: #F9B732;
+  --yellow-hover-color: #CE8E0E;
   --text-color: white;
   --text-hover-color: #CDCDCD;
   --hover-color: rgb(13, 116, 220);
