--- a/src/styles/home/popular/MostPopular.module.css
+++ b/src/styles/home/popular/MostPopular.module.css
@@ -24,12 +24,12 @@
   background-color: var(--yellow-color);
   color: #111111;
   padding: 1rem 5rem;
-  border-radius: 0.3rem;
+  border-radius: 0.5rem;
   transition: var(--default-transition-time)
 }
 
 .seeMoreBtn:hover {
-  background-color: #71717a;
+  background-color: var(--yellow-hover-color);
 }
 
 .seeMoreBtn:focus-visible {
